Consolation 빌드했을 때 빌드창에 띄워주는 디버그로그창 추가

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ UnityProjects/UntilTheEnd/.vs
 UnityProjects/UntilTheEnd/obj
 UnityProjects/UntilTheEnd/.vsconfig
 UnityProjects/UntilTheEnd/UserSettings
+
+//UnityProjects/UntilTheEnd/Assets/___consolation-master
